--- a/_includes/header.html
+++ b/_includes/header.html
@@ -29,7 +29,7 @@
 			<div id="header">
 						
 				<!-- Logo -->
-					<h1><a href="{{ site.baseurl }}/index.html" id="logo">GIT Courier Services<em>Best-in-class international deliveries</em></a></h1>
+					<h1><a href="{{ site.baseurl }}/index.html" id="logo">GIT Courier Services<em><br/>Best-in-class international deliveries</em></a></h1>
 				
 				<!-- Nav -->
 					<nav id="nav">
