--- a/assets/sass/style.scss
+++ b/assets/sass/style.scss
@@ -658,7 +658,7 @@
 
 	#banner {
 		background-image: url('../images/banner.jpg');
-		background-position: center center;
+		background-position: center bottom;
 		background-size: cover;
 		height: 28em;
 		text-align: center;
