--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -703,7 +703,7 @@
 
 	#banner {
 		background-image: url("../images/banner.jpg");
-		background-position: center center;
+		background-position: center bottom;
 		background-size: cover;
 		height: 28em;
 		text-align: center;
